# CV_ML_test

./: .gitignore  README.md  dataset.yaml  pyproject.toml
main/: augmentation.py  create_dataset.py  extract_frames.py  main.py  predict.py  train.py
result_train/result_1/: args.yaml  results.csv
result_train/result_2/: args.yaml  results.csv
